# RamanujanMachine

./: .gitignore  .pre-commit-config.yaml  Find Catalan PCF.ipynb  FindCatalan.py  G_lhs_dept10.db  Hypotheses  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
ESMA/: APITesting.py  EfficientGCF.py  enumerate_over_signed_rcf.py  lhs_generators.py  main.py  massey.py  mobius.py  series_generators.py  utils.py
LIReC/: config.py  create_db.py  lirec.py  print_relations.py  twitter_api.py
db/: .gitignore  config.py  create_db.py  logging.config  ramanujan.py
ramanujan/: CachedSeries.py  HugeLHSHashTable.py  LHSHashTable.py  cached_poly_series_calculator.py  cached_series_calculator.py  constants.py  enumerate_over_gcf.py  main.py  multiprocess_enumeration.py
ramanujan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: find_pi_sqared_results.py  find_zeta3_results.py  find_zeta5_results.py  multiprocessing_example.py  zeta3_fr_results.py  zeta3_infinite_family.py  zeta5_fixed_bn_roots.py
source/: AbstractGCFEnumerator.py  CartesianProductPolyDomain.py  EfficentGCFEnumerator.py  Experiments.py  FREnumerator.py  FROrientedPolyDomain.py  FixedBNPolyDomain.py  GCFEnumerator.py  GuessFromFREnumerator.py  HugeDomainRelativeGCFEnumerator.py  HugeLHSHashTable.py  LHSHashTable.py  PiSqaredDomain1.py  PiSqaredDomain2.py  RelativeGCFEnumerator.py  Zeta3Domain1.py  Zeta3Domain2.py  cached_poly_series_calculator.py  cached_series_calculator.py  catalan_family_check.py  constants.py  convergence_rate.py  enumerate_over_gcf.py  gen_consts.py  (+14 more)
(+113 files in other folders)
